CHATS_SIT/force-app/main/default/objects/sfsit_t_provr_fscl_agrmt_hist__x.object
<CustomObject>
    <description>sfsit$t_provr_fiscal_agrement_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_provr_fiscal_agrement_hist</externalName>
    <fields>
        <fullName>cde_county__c</fullName>
        <description>cde_county</description>
        <externalDeveloperName>cde_county</externalDeveloperName>
        <label>County Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_pmt_method__c</fullName>
        <description>cde_pmt_method</description>
        <externalDeveloperName>cde_pmt_method</externalDeveloperName>
        <label>Payment Method Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_reason_end_agrmt__c</fullName>
        <description>cde_reason_end_agrmt</description>
        <externalDeveloperName>cde_reason_end_agrmt</externalDeveloperName>
        <label>End Agreement Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_agrmt__c</fullName>
        <description>cde_type_agrmt</description>
        <externalDeveloperName>cde_type_agrmt</externalDeveloperName>
        <label>Agreement Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_status__c</fullName>
        <description>cde_type_status</description>
        <externalDeveloperName>cde_type_status</externalDeveloperName>
        <label>Status Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_agrmt__c</fullName>
        <description>dte_begin_agrmt</description>
        <externalDeveloperName>dte_begin_agrmt</externalDeveloperName>
        <label>Begin Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_close_agrmt_fiscal__c</fullName>
        <description>dte_close_agrmt_fiscal</description>
        <externalDeveloperName>dte_close_agrmt_fiscal</externalDeveloperName>
        <label>Fiscal Agreement Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_cntrct_agrmt__c</fullName>
        <description>dte_cntrct_agrmt</description>
        <externalDeveloperName>dte_cntrct_agrmt</externalDeveloperName>
        <label>Contract Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_effv_agrmt_fiscal__c</fullName>
        <description>dte_effv_agrmt_fiscal</description>
        <externalDeveloperName>dte_effv_agrmt_fiscal</externalDeveloperName>
        <label>Fiscal Agreement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_agrmt__c</fullName>
        <description>dte_end_agrmt</description>
        <externalDeveloperName>dte_end_agrmt</externalDeveloperName>
        <label>Agreement end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_rcv_agrmt_fiscal__c</fullName>
        <description>dte_rcv_agrmt_fiscal</description>
        <externalDeveloperName>dte_rcv_agrmt_fiscal</externalDeveloperName>
        <label>Fiscal Agreement Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_sent_agrmt_fiscal__c</fullName>
        <description>dte_sent_agrmt_fiscal</description>
        <externalDeveloperName>dte_sent_agrmt_fiscal</externalDeveloperName>
        <label>Fiscal Agreement Sent date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>id_service__c</fullName>
        <description>id_service</description>
        <externalDeveloperName>id_service</externalDeveloperName>
        <label>Service ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_agrmt_fiscal__c</fullName>
        <description>idn_agrmt_fiscal</description>
        <externalDeveloperName>idn_agrmt_fiscal</externalDeveloperName>
        <label>Fiscal Agreement Id</label>
        <length>50</length>
        <referenceTargetField>T_PROVR_FISCAL_AGREMENT__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_PROVR_FISCAL_AGREMENT__c</referenceTo>
        <relationshipLabel>Provider Fiscal Agreement Legacy History</relationshipLabel>
        <relationshipName>t_provr_fiscal_agrement_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_agrmt_fiscal_hist__c</fullName>
        <description>idn_agrmt_fiscal_hist</description>
        <externalDeveloperName>idn_agrmt_fiscal_hist</externalDeveloperName>
        <label>Fiscal Agreement Hist Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>t_provr_fiscal_agrement_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>History Sequence Id</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_wrkld__c</fullName>
        <description>nbr_seq_wrkld</description>
        <externalDeveloperName>nbr_seq_wrkld</externalDeveloperName>
        <label>Workload Sequence Id</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_cmt__c</fullName>
        <description>txt_cmt</description>
        <externalDeveloperName>txt_cmt</externalDeveloperName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Provider Fiscal Agreement History</label>
    <pluralLabel>Provider Fiscal Agreement History</pluralLabel>
</CustomObject>